tests/errors/zone-temp-struct-escape.ari
struct Holder {
  item: ptr i64,
}

fn main() -> i64 {
  var scratch = zone::temp(64);
  let item = zone::new<i64>(ref mut scratch, 5);
  let holder = Holder { item: item };
  return 0;
}
